css/main.sass
// Overall
body
  display: flex
  min-height: 100vh
  flex-direction: column

a
  &:hover
    text-decoration: underline

  &:active
    text-decoration: underline

main
  flex: 1 0 auto
  background: #eee

  table.highlight > tbody > tr:hover
    background-color: #ddd

  .card.info
    ul
      padding-left: 0

      li
        &.indicator
          background-color: #2196f3

        a
          &:hover
            text-decoration: none

          &:active
            text-decoration: none

    .card-title
      font-size: 18px
      line-height: 1.5

    p
      font-size: 12px

  .crumb
    padding: 0 24px
    white-space: nowrap
    overflow: hidden
    text-overflow: ellipsis

    .breadcrumb
      font-size: 16px

.dl
  background: #eee

.card-panel.info
  width: 728px
  margin-left: auto
  margin-right: auto
  margin-top: 20px
  margin-bottom: 20px

  a
    color: #1b5e20

.ad
  margin-left: auto
  margin-right: auto
  width: 728px
  height: 90px

header,
main,
footer
  padding-left: 300px

.container
  width: 95%

// Header
header
  height: 80px

  .side-nav
    height: calc(100%)
    height: -webkit-calc(100% + 60px)

    li
      &.active.blue
        a
          color: #fff

      &#vendor
        li
          a
            height: 100%
            line-height: 1.5
            padding: 15px 32px

    .search
      position: absolute
      left: 0
      right: 0
      z-index: 2

      .search-wrapper
        &.focused
          margin: 0

        margin: 0 12px
        transition: margin .25s ease

        input
          display: block
          width: 100%
          height: 45px
          margin: 0
          border: none
          padding: 0 45px 0 15px
          box-sizing: border-box

          &:focus
            outline: none
            box-shadow: none

        .search-results
          border-top: 1px solid #e9e9e9

          a
            font-size: 12px
            line-height: 1.5
            color: #039be5
            display: block
            padding: 15px 32px
            cursor: default

            &.hover
              background-color: #eee

            &:hover
              background-color: #eee
              outline: none

      i
        position: absolute
        top: 10px
        right: 10px
        cursor: pointer

  a:hover
    text-decoration: none

a
  &.button-collapse
    &.top-nav
      position: absolute
      text-align: center
      height: 48px
      width: 48px
      top: 0
      float: none
      color: #fff
      font-size: 36px
      z-index: 999
      line-height: 80px

nav 
  .page-title
    font-size: 36px
    font-weight: bold
    line-height: 80px

nav
  &.top-nav
    height: 80px

// Footer
footer.page-footer
  a
    color: #000

  .row
    margin-bottom: 0px

  p
    margin-top: 0px

@media only screen and (max-width: 992px)
  header,
  main,
  footer
    padding-left: 0

  nav 
    .nav-wrapper
      text-align: center

  footer 
    p
      text-align: center

@media only screen and (max-width: 768px)
  nav
    .page-title
      font-size: 24px

  main
    .scrollable-table
      display: block
      overflow-x: auto
      width: 100%

      th
        white-space: nowrap

    .crumb
      padding: 0 24px

      .breadcrumb
        font-size: 14px

  .card-panel.info
    width: 320px

  .ad
    width: 320px
    height: 100px

@media only screen and (max-width: 600px)
  nav
    .page-title
      font-size: 16px

